# madgab-online

./: .gitignore  Clue Parser.ipynb  Dockerrun.aws.json  README.md  RULES.md  app.py  check.ps1  clues.txt  clues_full.txt  docker-compose.yml  game.py  madgab.py  package-lock.json  profile_code.py  pyproject.toml  requirements.txt  setup.cfg  test.py
.github/workflows/: build_and_deploy.yml  test.yml
backend/: Dockerfile  app.py  game.py  game_config.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
backend/clues/: clues.json  clues.txt
backend/clues/clues_raw/: books.txt  places.txt
backend/madgab/: phoneme_to_pronunciation.json
backend/src/clues/: clue_manager.py  clues.json
backend/src/clues/clue_sets/: base.json  books.json  movies.json  musical_artists.json  people.json  songs.json  television_shows.json
backend/src/clues/clues_raw/: clue_parser.py  people.txt  song.txt
backend/src/game/: game.py  game_config.py
backend/src/madgab/: frequency.csv  frequency_matrix.py
backend/src/utils/: s3.py
backend/templates/: game.html
backend/tests/: test_app.py  test_clue_manager.py  test_frequency_matrix.py  test_game.py  test_madgab.py  test_s3.py  test_utils.py
backend/tools/: moderation.py
frontend/: .env.production  Dockerfile  Dockerfile.dev  example-state.json  nginx.conf  package-lock.json  package.json  webpack.config.dev.js
madgab/: madgab.py
templates/: game.html  game2.html  index.html
tests/: check.ps1  check.sh  profile_code.py  test.py  test_frequency_matrix.py  test_game.py  test_madgab.py
(+81 files in other folders)
